# MusicSync

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  prepare_env.sh  pyproject.toml  requirements.txt
src/: config.py  main.py
src/apple_music/: config.py  library.py
src/music_sync/: classes.py  config.py  main.py
src/music_sync/apple_music/: config.py  library.py  main.py  utils.py
src/music_sync/spotify/: config.py  main.py  matches.py  matching.py  similarity.py  sync.py  syncing.py  utils.py
src/spotify/: config.py  sync.py  utils.py
tests/: generate_alternatives.py  match.py  similarity.py
